--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<!-- external angular libraries -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-cookies.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.js"></script>
+		<script src="lib/bower-angular-translate-2.9.0/angular-translate.min.js"></script>
+		<script src="lib/bower-angular-translate-loader-static-files-master/angular-translate-loader-static-files.min.js"></script>
 
 		<!-- your app's js -->
 		<script src="js/app.js"></script>
